tests/typechecker/should_pass/tock_type.csp
channel tock : {0}

P = tock.0 -> P
