tests/typechecker/should_fail/duplicated_definitions_stmt.csp
channel a : Int.Int

P = a?x?x -> STOP
